apps/base/tileserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tileserver
  namespace: tileserver
spec:
  selector:
    app: tileserver
  ports:
    - port: 8080
      targetPort: 8080
